# newswatch

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  backfill.sh  pyproject.toml  samconfig.toml  template.yaml
.aws-sam/: build.toml
.github/workflows/: code-quality-and-tests.yaml  deploy-dev.yaml  deploy-live.yaml  deploy.yaml  main.yaml  terraform-apply.yaml  terraform-destroy.yaml  terraform-plan.yaml  terraform-reusable.yaml  test.yaml
assets/data/: treemap_all_words_20230601_20241012.csv  uk_time_series_selected_words_20200601_20241012.csv
scripts/: run_lambda.sh
src/: excluded-words.txt  extract.py  load.py  monitoring.py  requirements.txt  sites-with-filters.yaml  transform.py
src/common/: config.py  models.py  utils.py
src/newswatch/: extract.py  load.py  requirements.txt  transform.py
src/newswatch/common/: models.py  utils.py
src/newswatch/resources/: excluded-words.txt  sites-with-filters-uk.yaml  sites-with-filters-us.yaml
src/resources/: excluded-words.txt  sites-with-filters-uk.yaml  sites-with-filters-us.yaml
src/scripts/: _backfill.py  backfill_sqlite.sh  run_lambda.sh
terraform/: .terraform.lock.hcl  bigquery.tf  bigquery_moving_avg.sql  main.tf  s3.tf  variables.tf
tests/: conftest.py  requirements.txt  test_e2e.py  test_extract.py  test_load.py  test_transform.py  test_utils.py
tests/fixtures/site_htmls/: site1.html  site3.html
tests/fixtures/sites-with-filters_yaml/: empty_filter.yaml  not_string_filter.yaml  valid.yaml
tests/unit/common/: test_utils.py
tests/unit/extract/: conftest.py  test_extract.py
tests/unit/extract/site_htmls/: site4.html
