[project]
name = "newswatch"
description = "Watching news headlines and counting words in them "
requires-python = "~=3.10.5"
version = "0.0.1"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 120
target_version = ['py310']
include = '\.pyi?$'
