[project]
name = "newswatch"
description = "Watching news headlines and counting words in them "
version = "1.0.0"
requires-python = "==3.12.8"
authors = [{ name = "Ben Kulcsar" }]
license = { text = "MIT License" }
readme = "README.md"

dependencies = [
    "aws-lambda-typing>=2.20.0",
    "beautifulsoup4>=4.12.3",
    "boto3>=1.34.162",
    "google-cloud-bigquery>=3.25.0",
    "nltk>=3.9.1",
    "pyarrow>=19.0.1",
    "pydantic>=1.10.7",
    "pyyaml>=6.0",
    "requests>=2.32.4",
    "textblob>=0.17.1",
]

packages = [
  { include = "newswatch", from = "src" }
]

[tool.pytest.ini_options]
pythonpath = ["src", "src/newswatch"]

[tool.mypy]
mypy_path = ["src/newswatch"]
explicit_package_bases = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["google.api_core.exceptions", "google.cloud", "google.cloud.*"]
ignore_missing_imports = true

[tool.black]
line-length = 120
target_version = ['py312']
include = '\.pyi?$'

[tool.coverage.paths]
source = ["src"]

[dependency-groups]
dev = [
    "moto[s3]>=4.1.9",
    "mypy>=1.11.1",
    "pre-commit>=3.8.0",
    "pydantic>=1.10.7",
    "pyfakefs>=5.6.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.2",
    "types-pyyaml>=6.0.12",
    "types-requests>=2.32.0",
    "coverage-badge>=1.1.2",
    "ruff>=0.11.13",
]
